--- a/package.json
+++ b/package.json
@@ -6,21 +6,25 @@
     "serve": "vue-cli-service serve --open",
     "build": "vue-cli-service build"
   },
+  "comment": "生产环境依赖 --save",
   "dependencies": {
     "amfe-flexible": "^2.2.1",
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "cube-ui": "~1.12.15",
+    "good-storage": "^1.1.0",
     "moment": "^2.24.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
+  "commentx": "开发环境依赖 --save-dev",
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
     "@vue/cli-service": "^3.11.0",
     "postcss-px-to-viewport": "^0.0.3",
     "postcss-px2rem": "^0.3.0",
+    "query-string": "^6.8.3",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "vue-cli-plugin-cube-ui": "^0.2.5",
